--- a/src/app/components/cell.component.scss
+++ b/src/app/components/cell.component.scss
@@ -1,6 +1,6 @@
 :host {
-  height: 40px;
-  width: 40px;
+  height: 80px;
+  width: 80px;
   display: flex;
 }
 
@@ -11,7 +11,7 @@
   justify-content: center;
   box-shadow: 3px 3px 5px;
   font-weight: bold;
-  font-size: 30pt;
+  font-size: 45pt;
   background-color: white;
   border-radius: 8px;
 }
