--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,6 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   background-color: #cccccc;
 }
+* {
+  touch-action: manipulation;
+}
